--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "joi": "^14.3.1",
     "mongoose": "^5.5.14",
     "underscore": "^1.9.1"
+  },
+  "devDependencies": {
+    "jshint": "^2.10.2"
   }
 }
